# puddle-bot

./: .env.example  .gitignore  .pylintrc  LICENSE  README.md  api_client.py  bot.py  cache.json  commands.py  conf_example.py  config.py  database.py  i18n.py  main.py  match_tracker.py  pyproject.toml  requirements.txt  test_locale.py
.github/workflows/: pylint.yml
api_client/: __init__.py  api_client.md  api_client.py
commands/: admin.py  base_command.py  leaderboard.py  misc.py  player_management.py  stats.py
locales/: en.yml  fr.yml
tests/: conftest.py  test_i18n.py
utils/: __init__.py  exceptions.py  helpers.py
